--- a/src/Website/Content/Site.css
+++ b/src/Website/Content/Site.css
@@ -1,6 +1,7 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    overflow-y: scroll;
 }
 
 td.roster-state {
@@ -17,8 +18,9 @@ td.SignedOut, .table-striped > tbody > tr:nth-child(odd) > td.SignedOut {
 
 /* Set padding to keep content from hitting the edges */
 .body-content {
-    padding-left: 15px;
+    padding-left: 5px;
     padding-right: 15px;
+    padding-top: 1em;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
