--- a/src/Website/Views/Home/Index.cshtml
+++ b/src/Website/Views/Home/Index.cshtml
@@ -2,40 +2,92 @@
   ViewBag.Title = Strings.DashboardTitle;
 }
 <div class="row">
-  <div class="col-xs-12 col-md-8 col-md-push-2">
-    <table class="table table-striped table-condensed">
-      <thead>
-        <tr>
-          <th></th>
-          <th data-bind="sort: { arr: rows, prop: 'timeIn'}">Time In</th>
-          <th data-bind="sort: { arr: rows, prop: 'name'}">Name</th>
-          <th data-bind="sort: { arr: rows, prop: 'timeOutSort', default: true}">Time Out</th>
-          <th data-bind="sort: { arr: rows, prop: 'hours'}" class=" text-right hidden-xs">Hours</th>
-          <th data-bind="sort: { arr: rows, prop: 'miles'}" class=" text-right hidden-xs">Miles</th>
-        </tr>
-      </thead>
-      <!-- ko if: (rows().length > 0) -->
-      <tbody data-bind="foreachWithHighlight: { data: rows, duration: 3000}">
-        <tr>
-          <td class="roster" data-bind="css: state"></td>
-          <td data-bind="text: timeIn.fromNow()"></td>
-          <td><strong data-bind="text: name"></strong></td>
-          <td data-bind="text: timeOutText"></td>
-          <td class="text-right hidden-xs" data-bind="text: hours"></td>
-          <td class="text-right hidden-xs" data-bind="text: miles"></td>
-        </tr>
-      </tbody>
-      <!-- /ko -->
-      <!-- ko if: (rows().length == 0) -->
-      <tbody><tr><td colspan="6">No messages</td></tr></tbody>
-      <!-- /ko -->
-      <tfoot>
-        <tr><th colspan="6"><span data-bind="text: rows().length"></span> responders</th></tr>
-      </tfoot>
-    </table>
+  <div class="col-xs-12 col-md-8 col-md-offset-2">
+    <div class="panel panel-default">
+      <div class="form-inline panel-body">
+        <div class="form-group pull-right">
+          <label>Show:</label>
+          <button type="button" class="btn btn-sm btn-primary" data-bind="click: toggleRoster, css: { active: showRoster }" autocomplete="off">Roster</button>
+          <button type="button" class="btn btn-sm btn-primary" data-bind="click: toggleCalls, css: { active: showCalls }" autocomplete="off">Call Log</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="panel panel-primary" data-bind="visible: showRoster">
+      <div class="panel-heading">Roster</div>
+      <table class="table table-striped table-condensed">
+        <thead>
+          <tr>
+            <th></th>
+            <th data-bind="sort: { arr: roster, prop: 'timeIn'}">Time In</th>
+            <th data-bind="sort: { arr: roster, prop: 'name'}">Name</th>
+            <th data-bind="sort: { arr: roster, prop: 'timeOutSort', default: true}">Time Out</th>
+            <th data-bind="sort: { arr: roster, prop: 'hours'}" class=" text-right hidden-xs">Hours</th>
+            <th data-bind="sort: { arr: roster, prop: 'miles'}" class=" text-right hidden-xs">Miles</th>
+          </tr>
+        </thead>
+        <!-- ko if: (roster().length > 0) -->
+        <tbody data-bind="foreachWithHighlight: { data: roster, duration: 3000}">
+          <tr>
+            <td class="roster" data-bind="css: state"></td>
+            <td data-bind="text: timeIn.fromNow()"></td>
+            <td><strong data-bind="text: name"></strong></td>
+            <td data-bind="text: timeOutText"></td>
+            <td class="text-right hidden-xs" data-bind="text: hours"></td>
+            <td class="text-right hidden-xs" data-bind="text: miles"></td>
+          </tr>
+        </tbody>
+        <!-- /ko -->
+        <!-- ko if: (roster().length == 0) -->
+        <tbody><tr><td colspan="6">No calls</td></tr></tbody>
+        <!-- /ko -->
+        <tfoot>
+          <tr><th></th><th colspan="5"><span data-bind="text: roster().length"></span> responders</th></tr>
+        </tfoot>
+      </table>
+    </div>
+  </div>
+</div>
+<div class="row" data-bind="visible: showCalls" style="display:none">
+  <div class="col-xs-12">
+    <div class="panel panel-primary">
+      <div class="panel-heading">Call Log</div>
+      <table class="table table-striped table-condensed">
+        <thead>
+          <tr>
+            <th style="width:1em" data-bind="sort: { arr: calls, prop: 'time', default: true}">Time</th>
+            <th data-bind="sort: { arr: calls, prop: 'name'}">Name</th>
+            <th data-bind="sort: { arr: calls, prop: 'number'}" class="hidden-xs">Number</th>
+            @*<th data-bind="sort: { arr: roster, prop: 'hours'}" class=" text-right hidden-xs">Hours</th>
+              <th data-bind="sort: { arr: roster, prop: 'miles'}" class=" text-right hidden-xs">Miles</th>*@
+            <th class="hidden-xs">Message</th>
+          </tr>
+        </thead>
+        <!-- ko if: (calls().length > 0) -->
+        <tbody data-bind="foreachWithHighlight: { data: calls, duration: 3000}">
+          <tr>
+            <td class="text-right" style="width:1em; white-space:nowrap" data-bind="text: timeText"></td>
+            <td><strong data-bind="text: name"></strong></td>
+            <td data-bind="text: number" class="hidden-xs"></td>
+            <td data-bind="if: recording" class="hidden-xs">
+              <audio data-bind="attr: { src: recording }" controls="controls" />
+            </td>
+          </tr>
+        </tbody>
+        <!-- /ko -->
+        <!-- ko if: (calls().length == 0) -->
+        <tbody><tr><td colspan="3">No calls</td></tr></tbody>
+        <!-- /ko -->
+        <tfoot>
+          <tr><th colspan="3"><span data-bind="text: calls().length"></span> calls</th></tr>
+        </tfoot>
+      </table>
+    </div>
   </div>
 </div>
 
+
+
 @section scripts {
-@Scripts.Render("~/Scripts/site/page/index.js")
+  @Scripts.Render("~/Scripts/site/page/index.js")
 }
