--- a/src/Website/Views/Account/Login.cshtml
+++ b/src/Website/Views/Account/Login.cshtml
@@ -20,7 +20,7 @@
         <p>
           @foreach (AuthenticationDescription p in loginProviders.Where(f => f.Caption == "ESAR Office 365"))
         {
-            <button type="submit" class="btn btn-default" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+            <button type="submit" class="btn btn-default" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
           }
         </p>
       </div>
