--- a/src/Website/Views/Account/Login.cshtml
+++ b/src/Website/Views/Account/Login.cshtml
@@ -19,7 +19,7 @@
       <div id="socialLoginList">
         <p>
           @foreach (AuthenticationDescription p in loginProviders.Where(f => f.Caption == "ESAR Office 365"))
-        {
+          {
             <button type="submit" class="btn btn-default" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
           }
         </p>
@@ -28,11 +28,10 @@
   </div>
   <div class="col-md-4">
     <section id="socialLoginForm">
+      <h4>Use another service to log in.</h4>
+      <hr />
+      <p>Before using these logins you must register them by logging in with your ESAR Office 365 account (same as for the SharePoint site), then visit the @Html.ActionLink("Link Login", "Link") page.</p>
       @Html.Partial("_ExternalLoginsListPartial", new ExternalLoginListViewModel { ReturnUrl = ViewBag.ReturnUrl })
     </section>
   </div>
 </div>
-
-@section Scripts {
-  @Scripts.Render("~/bundles/jqueryval")
-}
