--- a/src/Website/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/src/Website/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,8 +1,6 @@
 ﻿@model Kcesar.MissionLine.Website.Models.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
-<h4>Use another service to log in.</h4>
-<hr />
 @{
   var icons = new Dictionary<string, dynamic>
   {
@@ -21,7 +19,7 @@
   }
   else
   {
-    using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl }))
+    using (Html.BeginForm("ExternalLogin", "Account", new { ReturnUrl = Model.ReturnUrl, LinkCode = Model.LinkCode }))
     {
       @Html.AntiForgeryToken()
       <div id="socialLoginList">
