--- a/src/Website/Views/Shared/Error.cshtml
+++ b/src/Website/Views/Shared/Error.cshtml
@@ -5,5 +5,5 @@
 }
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h3 class="text-danger">@(ViewBag.Message ?? "An error occurred while processing your request.")</h3>
 
