Fixes #2 (for real this time) - hide debug text.

--- a/src/Website/Views/Home/Index.cshtml
+++ b/src/Website/Views/Home/Index.cshtml
@@ -131,8 +131,8 @@
         <label>Opened Date: <input type="text" data-bind="value: opened.date" class="form-control" /></label>
         <label>Opened Time: <input type="text" data-bind="value: opened.time" class="form-control" /></label>
       </div>
-      <div data-bind="text: ko.toJSON($data)"></div>
-      <div data-bind="text: ko.toJSON(opened.isValid)"></div>
+      <div style="display:none" data-bind="text: ko.toJSON($data)"></div>
+      <div style="display:none" data-bind="text: ko.toJSON(opened.isValid)"></div>
     </div>
   </script>
   <script type="text/html" id="merge-dialog-template">
