--- a/src/Website/Views/Home/Index.cshtml
+++ b/src/Website/Views/Home/Index.cshtml
@@ -1,161 +1,206 @@
 ﻿@{
   ViewBag.Title = Strings.DashboardTitle;
 }
-<div class="row">
-  <div class="col-xs-12 col-md-8 col-md-offset-2">
-    <div class="panel panel-default">
-      <div class="form-inline panel-body">
-        <button type="button" class="btn btn-sm btn-primary" data-bind="click: createEvent">New Event</button>
-        <div class="form-group pull-right">
-          <label>Show:</label>
-          <button type="button" class="btn btn-sm btn-primary" data-bind="toggle: showRoster, css: { active: showRoster }" autocomplete="off">Roster</button>
-          <button type="button" class="btn btn-sm btn-primary" data-bind="toggle: showCalls, css: { active: showCalls }" autocomplete="off">Call Log</button>
+<div ng-controller="IndexCtrl">
+  <div class="row">
+    <div class="col-xs-12 col-md-8 col-md-offset-2">
+      <div class="panel panel-default">
+        <div class="form-inline panel-body">
+          <button type="button" class="btn btn-sm btn-primary" ng-click="createEvent()" data-bind="click: createEvent">New Event</button>
+          <div class="form-group pull-right">
+            <label>Show:</label>
+            <button type="button" class="btn btn-sm btn-primary" ng-click="showRoster = !showRoster" ng-class="{active: showRoster}" autocomplete="off">Roster</button>
+            <button type="button" class="btn btn-sm btn-primary" ng-click="showCalls = !showCalls" ng-class="{active: showCalls}" autocomplete="off">Call Log</button>
+          </div>
+        </div>
+      </div>
+      <div ng-show="showRoster">
+        <roster ng-show="unassignedEvent.roster.length" event="unassignedEvent" sort="rosterSort" sort-dir="rosterSortDesc"></roster>
+        <div ng-repeat="event in events">
+            <roster event="event" sort="rosterSort" sort-dir="rosterSortDesc"></roster>
+        </div>
+      </div>
+      <div ng-if="showRoster && events.length == 0" ng-cloak class="panel panel-default">
+        <div class="panel-body">No recent events</div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row" ng-show="showCalls" ng-cloak>
+    <div class="col-xs-12">
+      <div class="panel panel-primary">
+        <div class="panel-heading">Call Log</div>
+        <table class="table table-striped table-condensed">
+          <thead>
+            <tr>
+              <th style="width:1em" ng-click="callsSort='time'; callsSortDesc=!callsSortDesc">Time</th>
+              <th ng-click="callsSort='name'; callsSortDesc=!callsSortDesc">Name</th>
+              <th class="hidden-xs" ng-click="callsSort='number'; callsSortDesc=!callsSortDesc">Number</th>
+              <th class="hidden-xs">Message</th>
+            </tr>
+          </thead>
+          <tbody ng-if="calls.length > 0" ng-repeat="call in calls | orderBy: callsSort : callsSortDesc">
+            <tr>
+              <td class="text-right" style="width:1em; white-space:nowrap">{{call.timeText}}</td>
+              <td><strong>{{call.name}}</strong></td>
+              <td class="hidden-xs"><a ng-href="{{'tel:' + call.number}}">{{call.number}}</a></td>
+              <td class="hidden-xs">
+                <audio ng-if="call.recording" ng-src="{{call.recording}}" controls="controls" />
+              </td>
+            </tr>
+          </tbody>
+          <tbody ng-if="calls.length == 0"><tr><td colspan="3">No calls</td></tr></tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+@*<script type="text/html" id="roster-table-template">*@
+
+<script type="text/ng-template" id="roster.html">
+  <div class="panel" ng-class="{'panel-warning': event.isUnassigned, 'panel-default': event.closed, 'panel-primary': !event.closed && !event.isUnassigned}">
+    <div class="panel-heading">
+      <span class="fa fa-ban" ng-if="event.isUnassigned"></span>
+      <div class="btn-group" ng-if="!event.isUnassigned">
+        <button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+          <span class="fa fa-fw" ng-class="{'fa-ban': event.closed, 'fa-bullhorn': !event.closed }"></span> <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" role="menu">
+          <li ng-click="rosterCtrl.startEdit()"><button type="button" class="btn-link"><span class="fa fa-fw fa-edit"></span> Edit ...</button></li>
+          <li ng-click="rosterCtrl.startClose()" ng-if="!event.closed"><button type="button" class="btn-link"><span class="fa fa-fw fa-ban"></span> Close ...</button></li>
+          <li ng-if="event.closed" ng-click="rosterCtrl.reopen()"><button type="button" class="btn-link"><span class="fa fa-fw fa-bullhorn"></span> Reopen</button></li>
+          <li ng-click="rosterCtrl.startMerge()"><button type="button" class="btn-link"><span class="fa fa-fw fa-code-fork fa-rotate-180"></span> Merge into ...</button></li>
+        </ul>
+      </div>
+      Roster :: <span>{{event.name}}</span>
+    </div>
+    <table class="table table-striped table-condensed">
+      <thead>
+        <tr>
+          <th style="width:3%"></th>
+          <th style="width:15%" ng-click="sort='timeIn'; sortDesc=!sortDesc">Time In</th>
+          <th style="width:40%" ng-click="sort='name'; sortDesc=!sortDesc">Name</th>
+          <th style="width:15%" ng-click="sort='timeOutSort'; sortDesc=!sortDesc">Time Out</th>
+          <th style="width:12%" ng-click="sort='hours'; sortDesc=!sortDesc" class="text-right hidden-xs">Hours</th>
+          <th style="width:11%" ng-click="sort='miles'; sortDesc=!sortDesc" class="text-right hidden-xs">Miles</th>
+          <th style="width:4%"></th>
+        </tr>
+      </thead>
+      <tbody ng-if="event.roster.length" ng-repeat="responder in event.roster | orderBy:sort:sortDesc">
+        <tr>
+          <td class="roster" ng-class="responder.state"></td>
+          <td>{{responder.timeIn | eventTime : event.opened}}</td>
+          <td><strong ng-if="!responder.isMember">{{responder.name}}</strong><strong ng-if="responder.isMember"><a ng-href="{{'@(ViewBag.LinkTemplate)'.replace('{0}', responder.memberId)}}">{{responder.name}}</a></strong></td>
+          <td>{{responder.timeOut | eventTime : event.opened}}</td>
+          <td class="text-right hidden-xs">{{responder.hours}}</td>
+          <td class="text-right hidden-xs">{{responder.miles}}</td>
+          <td>
+            <div class="btn-group">
+              <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                <span class="fa fa-fw fa-bars"></span> <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li ng-if="!responder.timeOut" ng-click="rosterCtrl.signout(responder)"><button type="button" class="btn-link"><span class="fa fa-fw fa-ban"></span> Sign Out ...</button></li>
+                <li ng-if="responder.timeOut" ng-click="rosterCtrl.undoSignout(responder)"><button type="button" class="btn-link"><span class="fa fa-fw fa-bullhorn"></span> Undo Sign Out</button></li>
+                <li ng-repeat="other in rosterCtrl.events | exceptId:event" ng-click="rosterCtrl.moveToEvent(responder, other)"><button type="button" class="btn-link"><span class="fa fa-fw fa-share-square-o"></span> Move to {{other.name}}</button></li>
+              </ul>
+            </div>
+
+          </td>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr><th></th><th colspan="6">{{event.roster.length}} responders</th></tr>
+      </tfoot>
+    </table>
+  </div>
+</script>
+
+
+<script type="text/ng-template" id="editDialogTemplate.html">
+  <div>
+    <div class="form-group" data-bind="css: { 'has-error': name.error() }">
+      <label>Title: <input type="text" ng-model="model.name" class="form-control" /></label>
+      <span class="help-block" data-bind="text: name.error()"></span>
+    </div>
+    <div class="form-group">
+      <label>Opened Date: <input type="text" ng-model="model.datePart" data-bind="value: opened.date" class="form-control" /></label>
+      <label>Opened Time: <input type="text" ng-model="model.timePart" data-bind=" value: opened.time" class="form-control" /></label>
+      <div>{{model.timePart}}</div>
+    </div>
+    <div style="display:none" data-bind="text: ko.toJSON($data)"></div>
+    <div style="display:none" data-bind="text: ko.toJSON(opened.isValid)"></div>
+  </div>
+</script>
+
+
+<script type="text/html" id="merge-dialog-template">
+  <p>This form will allow you to merge event &quot;<strong data-bind="text: fromEvent.name()"></strong>&quot; into another existing event.</p>
+  <div class="form-inline">
+    <div class="form-group">
+      <label>Merge Into: <select class="form-control" data-bind="options: availableEvents, optionsText: 'name', value: targetEvent"></select></label>
+    </div>
+  </div>
+</script>
+<script type="text/html" id="signout-template">
+  <p>Sign out <span data-bind="text: rosterName"></span> from <span data-bind="text: eventName"></span></p>
+  <div>
+    <div class="form-group">
+      <label>Date: <input type="text" data-bind="value: timeOut.date" class="form-control" /></label>
+    </div>
+    <div class="form-group">
+      <label>Time: <input type="text" data-bind="value: timeOut.time" class="form-control" /></label>
+    </div>
+    <div class="form-group">
+      <label>Miles: <input type="text" data-bind="value: miles" class="form-control" /></label>
+    </div>
+  </div>
+</script>
+
+<script type="text/ng-template" id="modal.html">
+  @*<div class="modal fade">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" ng-click="close()" data-dismiss="modal" aria-hidden="true">&times;</button>
+          <h4 class="modal-title">{{title}}</h4>
+        </div>
+        <div class="modal-body">*@
+          <p>
+            Here's a more complex modal, it contains a form, data is passed to the controller
+            and data is returned from the modal.
+          </p>
+
+          <form class="form-horizontal" role="form">
+            <div class="form-group">
+              <label for="name" class="col-sm-2 control-label">Name</label>
+              <div class="col-sm-10">
+                <input type="text" class="form-control" id="name" placeholder="Your Name" ng-model="model.name">
+              </div>
+            </div>
+            <div class="form-group">
+              <label for="age" class="col-sm-2 control-label">Age</label>
+              <div class="col-sm-10">
+                <input type="number" class="form-control" id="inputPassword3" placeholder="Age" ng-model="model.age">
+              </div>
+            </div>
+          </form>
+
+        @*</div>
+        <div class="modal-footer">
+          <button type="button" ng-click="close()" class="btn btn-primary" data-dismiss="modal">OK</button>
+          <button type="button" ng-click="cancel()" class="btn">Cancel</button>
         </div>
       </div>
     </div>
-
-    <div data-bind="visible: unassignedEvent.roster().length" style="display:none">
-      <div data-bind="template: { name: 'roster-table-template', data: unassignedEvent}"></div>
-    </div>
-    <div data-bind="visible: showRoster, foreach: events" style="display: none">
-      <div data-bind="template: { name: 'roster-table-template', data: $data }"></div>
-    </div>
-  </div>
-</div>
-<div class="row" data-bind="visible: showCalls" style="display:none">
-  <div class="col-xs-12">
-    <div class="panel panel-primary">
-      <div class="panel-heading">Call Log</div>
-      <table class="table table-striped table-condensed">
-        <thead>
-          <tr>
-            <th style="width:1em" data-bind="sort: { arr: calls, prop: 'time', default: true}">Time</th>
-            <th data-bind="sort: { arr: calls, prop: 'name'}">Name</th>
-            <th data-bind="sort: { arr: calls, prop: 'number'}" class="hidden-xs">Number</th>
-            <th class="hidden-xs">Message</th>
-          </tr>
-        </thead>
-        <!-- ko if: (calls().length > 0) -->
-        <tbody data-bind="foreachWithHighlight: { data: calls, duration: 3000}">
-          <tr>
-            <td class="text-right" style="width:1em; white-space:nowrap" data-bind="text: timeText"></td>
-            <td><strong data-bind="text: name"></strong></td>
-            <td class="hidden-xs"><a data-bind="text: number, attr: {href: 'tel:' + number }"></a></td>
-            <td data-bind="if: recording" class="hidden-xs">
-              <audio data-bind="attr: { src: recording }" controls="controls" />
-            </td>
-          </tr>
-        </tbody>
-        <!-- /ko -->
-        <!-- ko if: (calls().length == 0) -->
-        <tbody><tr><td colspan="3">No calls</td></tr></tbody>
-        <!-- /ko -->
-      </table>
-    </div>
-  </div>
-</div>
+  </div>*@
+</script>
 
 @section scripts {
-  <script type="text/html" id="roster-table-template">
-    <div class="panel" data-bind="visible: $root.showRoster, css: $root.getRosterClass($data)">
-      <div class="panel-heading">
-        <!-- ko if: isUnassignedEvent -->
-        <span class="fa fa-ban"></span>
-        <!-- /ko -->
-        <!-- ko if: !isUnassignedEvent -->
-        <div class="btn-group">
-          <button type="button" class="btn btn-sm btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-            <span class="fa fa-fw" data-bind="css: { 'fa-ban': closed(), 'fa-bullhorn': !closed() }"></span> <span class="caret"></span>
-          </button>
-          <ul class="dropdown-menu" role="menu">
-            <li data-bind="click: $root.startClose, visible: !closed()"><button type="button" class="btn-link"><span class="fa fa-fw fa-ban"></span> Close ...</button></li>
-            <li data-bind="click: $root.reopen, visible: closed"><button type="button" class="btn-link"><span class="fa fa-fw fa-bullhorn"></span> Reopen</button></li>
-            <li data-bind="click: $root.startMerge"><button type="button" class="btn-link"><span class="fa fa-fw fa-code-fork fa-rotate-180"></span> Merge into ...</button></li>
-          </ul>
-        </div>
-        <!-- /ko -->
-        Roster :: <span data-bind="text: name"></span>
-      </div>
-      <table class="table table-striped table-condensed">
-        <thead>
-          <tr>
-            <th style="width:3%"></th>
-            <th style="width:15%" data-bind="sort: { arr: $root.roster, prop: 'timeIn'}">Time In</th>
-            <th style="width:40%" data-bind="sort: { arr: $root.roster, prop: 'name'}">Name</th>
-            <th style="width:15%" data-bind="sort: { arr: $root.roster, prop: 'timeOutSort', default: true}">Time Out</th>
-            <th style="width:12%" data-bind="sort: { arr: $root.roster, prop: 'hours'}" class=" text-right hidden-xs">Hours</th>
-            <th style="width:11%" data-bind="sort: { arr: $root.roster, prop: 'miles'}" class=" text-right hidden-xs">Miles</th>
-            <th style="width:4%"></th>
-          </tr>
-        </thead>
-        <!-- ko if: (roster().length > 0) -->
-        <tbody data-bind="foreachWithHighlight: { data: roster, duration: 3000}">
-          <tr>
-            <td class="roster" data-bind="css: state"></td>
-            <td data-bind="text: $root.formatTime($parent.opened, timeIn)"></td>
-            <td><strong data-bind="text: name, conditionalLink: { test: isMember, value: '@(ViewBag.LinkTemplate)'.replace('{0}', memberId) }"></strong></td>
-            <td data-bind="text: $root.formatTime($parent.opened, timeOut)"></td>
-            <td class="text-right hidden-xs" data-bind="text: hours"></td>
-            <td class="text-right hidden-xs" data-bind="text: miles"></td>
-            <td>
-              <div class="btn-group">
-                <button type="button" class="btn btn-xs btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                  <span class="fa fa-fw fa-bars"></span> <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
-                  <li data-bind="click: $root.signout.bind($root, $parent, $data), visible: !timeOutText"><button type="button" class="btn-link"><span class="fa fa-fw fa-ban"></span> Sign Out ...</button></li>
-                  <li data-bind="click: $root.undoSignout.bind($root, $parent, $data), visible: timeOutText"><button type="button" class="btn-link"><span class="fa fa-fw fa-bullhorn"></span> Undo Sign Out</button></li>
-                  <!-- ko foreach: $parent.otherEvents -->
-                  <li data-bind="click: $parent.moveToEvent"><button type="button" class="btn-link"><span class="fa fa-fw fa-share-square-o"></span> Move to <span data-bind="text: $data.name"></span></button></li>
-                  <!-- /ko -->
-                </ul>
-              </div>
-
-            </td>
-          </tr>
-        </tbody>
-        <!-- /ko -->
-        <tfoot>
-          <tr><th></th><th colspan="6"><span data-bind="text: roster().length">0</span> responders</th></tr>
-        </tfoot>
-      </table>
-    </div>
-  </script>
-  <script type="text/html" id="edit-dialog-template">
-    <div data-bind="with:editingEvent">
-      <div class="form-group" data-bind="css: { 'has-error': name.error() }">
-        <label>Title: <input type="text" data-bind="value: name" class="form-control" /></label>
-        <span class="help-block" data-bind="text: name.error()"></span>
-      </div>
-      <div class="form-group">
-        <label>Opened Date: <input type="text" data-bind="value: opened.date" class="form-control" /></label>
-        <label>Opened Time: <input type="text" data-bind="value: opened.time" class="form-control" /></label>
-      </div>
-      <div style="display:none" data-bind="text: ko.toJSON($data)"></div>
-      <div style="display:none" data-bind="text: ko.toJSON(opened.isValid)"></div>
-    </div>
-  </script>
-  <script type="text/html" id="merge-dialog-template">
-    <p>This form will allow you to merge event &quot;<strong data-bind="text: fromEvent.name()"></strong>&quot; into another existing event.</p>
-    <div class="form-inline">
-      <div class="form-group">
-        <label>Merge Into: <select class="form-control" data-bind="options: availableEvents, optionsText: 'name', value: targetEvent"></select></label>
-      </div>
-    </div>
-  </script>
-  <script type="text/html" id="signout-template">
-    <p>Sign out <span data-bind="text: rosterName"></span> from <span data-bind="text: eventName"></span></p>
-    <div>
-      <div class="form-group">
-        <label>Date: <input type="text" data-bind="value: timeOut.date" class="form-control" /></label>
-      </div>
-      <div class="form-group">
-        <label>Time: <input type="text" data-bind="value: timeOut.time" class="form-control" /></label>
-      </div>
-      <div class="form-group">
-        <label>Miles: <input type="text" data-bind="value: miles" class="form-control" /></label>
-      </div>
-    </div>
-  </script>
   @Scripts.Render("~/bundles/page/index")
+<script type="text/javascript">
+    window.hasHubs = true;
+</script>
 }
