--- a/src/Website/Views/Home/Index.cshtml
+++ b/src/Website/Views/Home/Index.cshtml
@@ -112,7 +112,7 @@
         </tr>
       </tbody>
       <tfoot>
-        <tr><th></th><th colspan="6">{{event.roster.length}} responders</th></tr>
+        <tr><th></th><th colspan="6">{{event.roster.length}} responders<span ng-if="!event.isUnassigned" style="float:right;font-weight:normal">Opened {{event.opened.fromNow()}}</span></th></tr>
       </tfoot>
     </table>
   </div>
@@ -120,19 +120,29 @@
 
 
 <script type="text/ng-template" id="editDialogTemplate.html">
-  <div>
-    <div class="form-group" data-bind="css: { 'has-error': name.error() }">
-      <label>Title: <input type="text" ng-model="model.name" class="form-control" /></label>
-      <span class="help-block" data-bind="text: name.error()"></span>
+  <form name="eventForm">
+    <div class="form-group" ng-class="{ 'has-error': isInvalid(eventForm, 'name')}">
+      <label for="name" class="control-label">Title: </label>
+      <input name="name" type="text" ng-model="model.name" class="form-control" required />
+      <div class="help-block" ng-if="isInvalid(eventForm, 'name')">
+        <div ng-if="eventForm.name.$error.required">Event title is required.</div>
+      </div>
     </div>
-    <div class="form-group">
-      <label>Opened Date: <input type="text" ng-model="model.datePart" data-bind="value: opened.date" class="form-control" /></label>
-      <label>Opened Time: <input type="text" ng-model="model.timePart" data-bind=" value: opened.time" class="form-control" /></label>
-      <div>{{model.timePart}}</div>
+    <div class="form-group inline-form-group" ng-class="{ 'has-error': isInvalid(eventForm, 'date')}">
+      <label for="date" class="control-label">Opened Date:</label>
+      <input name="date" type="{{Modernizr.touch?'date':'text'}}" ng-attr-pattern="{{Modernizr.touch?null:'^\\d{4}-\\d{2}-\\d{2}$'}}" ng-model="model.datePart" class="form-control"/></label>
+      <div class="help-block" ng-if="isInvalid(eventForm, 'date')">
+        <div ng-if="eventForm.date.$error.pattern">Must be in form YYYY-MM-DD.</div>
+      </div>
+      </div>
+    <div class="form-group inline-form-group" ng-class="{ 'has-error': isInvalid(eventForm, 'time')}">
+      <label for="time" class="control-label">Opened Time:</label>
+      <input name="time" type="{{Modernizr.touch?'time':'text'}}" ng-model="model.timePart" ng-attr-pattern="{{Modernizr.touch?null:'^[012]?\\d:[0-5]\\d$'}}" class="form-control" />
+      <div class="help-block" ng-if="isInvalid(eventForm, 'time')">
+        <div ng-if="eventForm.time.$error.pattern">Must be in form HH:MM.</div>
+      </div>
     </div>
-    <div style="display:none" data-bind="text: ko.toJSON($data)"></div>
-    <div style="display:none" data-bind="text: ko.toJSON(opened.isValid)"></div>
-  </div>
+  </form>
 </script>
 
 
