Angular roster - signout and undo w/push notification

--- a/src/Website/Views/Home/Index.cshtml
+++ b/src/Website/Views/Home/Index.cshtml
@@ -70,7 +70,7 @@
         $.extend($scope, {
           showRoster: true,
           showCalls: false,
-          unassignedEvent: { 'name': 'Unassigned', roster: [{ name: 'Matt' }], isUnassigned: true },
+          unassignedEvent: eventsService.unassigned,
           callsSort: 'time',
           callsSortDesc: true,
           rosterSort: 'timeOut',
