--- a/src/Website/Views/Home/_EditDialog.cshtml
+++ b/src/Website/Views/Home/_EditDialog.cshtml
@@ -9,7 +9,7 @@
     </div>
     <div class="form-group inline-form-group" ng-class="{ 'has-error': isInvalid(eventForm, 'date')}">
       <label for="date" class="control-label">Opened Date:</label>
-      <input name="date" type="{{Modernizr.touch?'date':'text'}}" ng-attr-pattern="{{Modernizr.touch?null:'^\\d{4}-\\d{2}-\\d{2}$'}}" ng-model="model.datePart" class="form-control" /></label>
+      <input name="date" type="{{Modernizr.touch?'date':'text'}}" ng-attr-pattern="{{Modernizr.touch?null:'^\\d{4}-\\d{2}-\\d{2}$'}}" ng-model="model.datePart" class="form-control" />
       <div class="help-block" ng-if="isInvalid(eventForm, 'date')">
         <div ng-if="eventForm.date.$error.pattern">Must be in form YYYY-MM-DD.</div>
       </div>
