Add button to dashboard, change signout link

--- a/src/Website/Views/Home/Index.cshtml
+++ b/src/Website/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
       <div class="panel panel-default">
         <div class="form-inline panel-body">
           <button type="button" class="btn btn-sm btn-primary" ng-click="createEvent()">New Event</button>
+          <a href="~/me" class="btn btn-sm btn-primary">Sign In/Out</a>
           <div class="form-group pull-right">
             <label>Show:</label>
             <button type="button" class="btn btn-sm btn-primary" ng-click="showRoster = !showRoster" ng-class="{active: showRoster}" autocomplete="off">Roster</button>
