replace missing comma

--- a/src/Website/Views/Home/Dashboard.cshtml
+++ b/src/Website/Views/Home/Dashboard.cshtml
@@ -75,7 +75,7 @@
           showRoster: true,
           showCalls: false,
           unassignedEvent: eventsService.unassigned,
-          callsSort: 'time'
+          callsSort: 'time',
           callsSortDesc: true,
           rosterSort: 'timeOut',
           rosterSortDesc: true,
