update github link

--- a/src/Website/Views/Shared/_Layout.cshtml
+++ b/src/Website/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
     @RenderBody()
     <div class="row">
       <footer class="col-xs-12">
-        <p>&copy; @DateTime.Now.Year - This project is open source. View it on <a href="https://github.com/mcosand/MissionLine">GitHub</a></p>
+        <p>&copy; @DateTime.Now.Year - This project is open source. View it on <a href="https://github.com/kcesar/MissionLine">GitHub</a></p>
       </footer>
     </div>
   </div>
